--- a/styles/base/_media-variables.scss
+++ b/styles/base/_media-variables.scss
@@ -1,20 +1,14 @@
+$screen-xxxs-min: "(min-width: 320px)";
+$screen-xxxs-max: "(max-width: 321px)";
+
 $screen-xxs-min: "(min-width: 361px)";
 $screen-xxs-max: "(max-width: 360px)";
-
-$screen-xs-min: "(min-width: 577px)";
-$screen-xs-max: "(max-width: 576px)";
 
 $screen-sm-min: "(min-width: 768px)";
 $screen-sm-max: "(max-width: 767px)";
 
-$screen-md-min: "(min-width: 992px)";
-$screen-md-max: "(max-width: 991px)";
-
 $screen-md2-min: "(min-width: 1024px)";
 $screen-md2-max: "(max-width: 1025px)";
-
-$screen-lg-min: "(min-width: 1201px)";
-$screen-lg-max: "(max-width: 1200px)";
 
 $screen-xl-min2: "(min-width: 1440px)";
 $screen-xl-min: "(min-width: 1441px)";
