--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -1,8 +1,7 @@
-$red-1: rgb(211, 115, 115);
-
-$text-color: #232329;
-$btn-background: #de4f3f;
-$btn-background-hover: #a92617;
-
-$progress-line: #c7c7d8;
-$progress-bar: #232329;
+$black-light: #232329;
+$orange: #de4f3f;
+$dark-orange: #a92617;
+$orange-ultra-light: #f4e7dc;
+$white: #ffffff;
+$gray-light: #c7c7d8;
+$purple-light: #e9e9f0;
