--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -87,7 +87,7 @@
     font-family: "Gilroy-Medium";
     font-style: normal;
     font-weight: 500;
-    color: $text-color;
+    color: $black-light;
 
     @media #{$screen-sm-min} {
       font-size: 14px;
