--- a/styles/components/_calendar.scss
+++ b/styles/components/_calendar.scss
@@ -1,22 +1,62 @@
 .calendar {
-  width: 100%;
-  max-width: 370px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 370px;
+  height: 386px;
+  padding: 20px 30px;
+  border: 1px solid $gray-light;
+  border-radius: 20px;
 
-  &__month {
-    background-color: $red-1;
+  &__control {
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    align-items: center;
+    width: 243px;
+    height: 40px;
+  }
+
+  &__month-text {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 120%;
+  }
+
+  &__picked {
+    background-color: $orange;
+    color: $white;
+  }
+
+  &__days {
+    height: 100%;
+    font-family: "Gilroy-Light", sans-serif;
+    font-size: 20px;
+    line-height: 130%;
   }
 
   &__day {
-    background-color: rgb(170, 224, 170);
-    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+  }
 
-    &--circled {
-      border-radius: 50%;
-      border: 1px solid $red-1;
-    }
+  &__day:hover {
+    border: 1px solid $orange;
+    cursor: pointer;
+  }
 
-    &--selected {
-      background-color: $red-1;
-    }
+  table {
+    width: 100%;
+    height: 100%;
+  }
+
+  td,
+  th {
+    padding: 3px;
+    text-align: center;
   }
 }
