--- a/styles/components/_affiche.scss
+++ b/styles/components/_affiche.scss
@@ -3,23 +3,55 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 770px;
-  height: 386px;
-  padding: 40px 60px;
+  width: 280px;
+  height: 239px;
+  padding: 20px;
   background-color: $orange-ultra-light;
   border-radius: 20px;
 
+  @media #{$screen-md2-min} {
+    width: 533px;
+    height: 340px;
+    padding: 40px 50px;
+  }
+
+  @media #{$screen-xl-min2} {
+    width: 770px;
+    height: 386px;
+    padding: 40px 60px;
+  }
+
   &__date {
     font-weight: 600;
-    font-size: 46px;
-    line-height: 125%;
+    font-size: 24px;
+    line-height: 120%;
     color: $orange;
+
+    @media #{$screen-md2-min} {
+      font-size: 32px;
+      line-height: 125%;
+    }
+
+    @media #{$screen-xl-min2} {
+      font-size: 46px;
+      line-height: 125%;
+    }
   }
 
   &__text {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 125%;
+    font-size: 14px;
+    line-height: 140%;
+
+    @media #{$screen-md2-min} {
+      font-size: 20px;
+      line-height: 130%;
+    }
+
+    @media #{$screen-xl-min2} {
+      font-size: 24px;
+      line-height: 125%;
+    }
   }
 
   &__about {
@@ -29,22 +61,40 @@
   }
 
   &__control-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 204px;
+    height: 30px;
     padding: 6px 15px 4px;
     border-radius: 91px;
     background-color: $white;
+    font-size: 14px;
+    line-height: 140%;
+    white-space: nowrap;
+
+    @media #{$screen-md2-min} {
+      width: 228px;
+      height: 32px;
+      font-size: 16px;
+      line-height: 140%;
+    }
   }
 
   &__control-text {
     font-family: "Gilroy-Light";
     font-weight: 400;
-    font-size: 16px;
-    line-height: 140%;
   }
 
   &__control-right {
     display: flex;
     gap: 15px;
     align-items: center;
+    display: none;
+
+    @media #{$screen-md2-min} {
+      display: flex;
+    }
   }
 
   &__more {
