--- a/styles/components/_calendar.scss
+++ b/styles/components/_calendar.scss
@@ -2,11 +2,26 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  width: 370px;
-  height: 386px;
+  width: 280px;
+  height: 292px;
   padding: 20px 30px;
   border: 1px solid $gray-light;
   border-radius: 20px;
+
+  @media #{$screen-sm-min} {
+    width: 270px;
+    height: 302px;
+  }
+
+  @media #{$screen-md2-min} {
+    width: 287px;
+    height: 340px;
+  }
+
+  @media #{$screen-xl-min2} {
+    width: 370px;
+    height: 386px;
+  }
 
   &__control {
     display: flex;
@@ -19,8 +34,18 @@
 
   &__month-text {
     font-weight: 600;
-    font-size: 24px;
-    line-height: 120%;
+    font-size: 14px;
+    line-height: 140%;
+
+    @media #{$screen-md2-min} {
+      font-size: 20px;
+      line-height: 130%;
+    }
+
+    @media #{$screen-xl-min2} {
+      font-size: 24px;
+      line-height: 120%;
+    }
   }
 
   &__picked {
@@ -31,8 +56,24 @@
   &__days {
     height: 100%;
     font-family: "Gilroy-Light", sans-serif;
-    font-size: 20px;
-    line-height: 130%;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+
+    @media #{$screen-sm-min} {
+      font-size: 14px;
+      line-height: 140%;
+    }
+
+    @media #{$screen-md2-min} {
+      font-size: 16px;
+      line-height: 140%;
+    }
+
+    @media #{$screen-xl-min2} {
+      font-size: 20px;
+      line-height: 130%;
+    }
   }
 
   &__day {
@@ -42,6 +83,11 @@
     width: 32px;
     height: 32px;
     border-radius: 50%;
+
+    @media #{$screen-md2-max} {
+      width: 28px;
+      height: 28px;
+    }
   }
 
   &__day:hover {
@@ -52,11 +98,12 @@
   table {
     width: 100%;
     height: 100%;
+    border-collapse: collapse;
   }
 
   td,
   th {
-    padding: 3px;
+    // padding: 3px;
     text-align: center;
   }
 }
