added and styled modal window

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -1,7 +1,9 @@
 $black-light: #232329;
+$black-light-transparent: rgba(35, 35, 41, 0.5);
 $orange: #de4f3f;
 $dark-orange: #a92617;
 $orange-ultra-light: #f4e7dc;
 $white: #ffffff;
 $gray-light: #c7c7d8;
 $purple-light: #e9e9f0;
+$gray-lighter: #c4c4c4;
