--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -9,8 +9,24 @@
   }
 
   &__text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
     @media #{$screen-xxxs-max} {
       order: 1;
+    }
+
+    @media #{$screen-sm-min} {
+      gap: 28px;
+    }
+
+    @media #{$screen-md2-min} {
+      gap: 30px;
+    }
+
+    @media #{$screen-xl-min2} {
+      gap: 40px;
     }
   }
 
@@ -88,7 +104,7 @@
     padding: 10px 30px;
     transition: 0.2s;
 
-    font-family: "Gilroy-Medium";
+    font-family: "Gilroy-Regular";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -98,7 +114,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
       width: 172px;
       height: 40px;
       padding: 15px 31px;
