--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,6 +21,13 @@ a {
   color: inherit;
 }
 
+p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .main-container {
   position: relative;
   height: 100%;
@@ -47,6 +54,10 @@ a {
   @media #{$screen-xl-min2} {
     max-width: 1170px;
   }
+}
+
+.active {
+  display: block;
 }
 
 .svg-24 {
