--- a/styles/components/_modal-window.scss
+++ b/styles/components/_modal-window.scss
@@ -47,7 +47,29 @@
     gap: 20px;
   }
 
+  &__input-group {
+    position: relative;
+  }
+
+  &__error-text {
+    position: absolute;
+    display: none;
+    left: 15px;
+    top: 35px;
+    color: $orange;
+  }
+
+  &__error {
+    display: inline;
+  }
+
+  &__error-bottom {
+    color: $orange !important;
+    border-bottom: 1px solid $orange !important;
+  }
+
   &__input {
+    width: 100%;
     height: 32px;
     padding-left: 15px;
     margin-left: 0;
