--- a/styles/style.scss
+++ b/styles/style.scss
@@ -33,7 +33,11 @@ p {
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
+
+  @media #{$screen-md2-min} {
+    padding-bottom: 100px;
+  }
 }
 
 .container {
