--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -103,6 +103,7 @@
     color: #fff;
     padding: 10px 30px;
     transition: 0.2s;
+    cursor: pointer;
 
     font-family: "Gilroy-Regular";
     font-style: normal;
@@ -271,17 +272,25 @@
     width: 240px;
     color: $white;
     font-family: "Gilroy-Medium";
+    font-size: 16px;
+    line-height: 140%;
 
     @media #{$screen-sm-min} {
       width: 260px;
+      font-size: 14px;
+      line-height: 140%;
     }
 
     @media #{$screen-md2-min} {
       width: 300px;
+      font-size: 16px;
+      line-height: 140%;
     }
 
     @media #{$screen-xl-min2} {
       width: 350px;
+      font-size: 20px;
+      line-height: 28px;
     }
   }
 
