highlighted days with events in calendar

--- a/styles/components/_calendar.scss
+++ b/styles/components/_calendar.scss
@@ -90,6 +90,10 @@
     }
   }
 
+  &__event-day {
+    border: 1px solid $orange;
+  }
+
   &__day:hover {
     border: 1px solid $orange;
     cursor: pointer;
