--- a/styles/components/_affiche.scss
+++ b/styles/components/_affiche.scss
@@ -103,6 +103,28 @@
     font-size: 20px;
     line-height: 130%;
   }
+
+  &__arrow-right {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: rotate(180deg);
+  }
+
+  &__arrow-left {
+    position: absolute;
+    left: 20px;
+    top: 50%;
+  }
+
+  &__arrow-left,
+  &__arrow-right {
+    display: none;
+
+    @media #{$screen-md2-min} {
+      display: inline;
+    }
+  }
 }
 
 .affiche:hover {
