--- a/styles/components/_calendar.scss
+++ b/styles/components/_calendar.scss
@@ -28,8 +28,16 @@
     justify-content: space-between;
     align-self: center;
     align-items: center;
-    width: 243px;
+    width: 162px;
     height: 40px;
+
+    @media #{$screen-md2-min} {
+      width: 218px;
+    }
+
+    @media #{$screen-xl-min2} {
+      width: 243px;
+    }
   }
 
   &__month-text {
