--- a/styles/components/_modal-window.scss
+++ b/styles/components/_modal-window.scss
@@ -37,7 +37,7 @@
     top: 28px;
     right: 28px;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       top: 12px;
       right: 12px;
       width: 23px;
@@ -49,7 +49,7 @@
     font-size: 24px;
     line-height: 130%;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       font-size: 16px;
       width: 200px;
     }
@@ -96,7 +96,7 @@
     font-size: 16px;
     line-height: 130%;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       height: 25px;
       font-size: 12px;
       padding-left: 7px;
@@ -129,7 +129,7 @@
     font-size: 16px;
     line-height: 130%;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       height: 25px;
       font-size: 12px;
       padding-left: 4px;
@@ -155,7 +155,7 @@
     font-size: 16px;
     line-height: 130%;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       margin-top: 0px;
       font-size: 12px;
       padding: 7px;
@@ -175,7 +175,7 @@
     align-items: baseline;
     gap: 12px;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       gap: 6px;
     }
   }
@@ -215,7 +215,7 @@
     font-size: 14px;
     line-height: 140%;
 
-    @media #{$screen-xxxs-max} {
+    @media #{$screen-sm-max} {
       width: 100%;
       margin-top: 20px;
     }
