--- a/styles/components/_modal-window.scss
+++ b/styles/components/_modal-window.scss
@@ -1,6 +1,6 @@
 .modal-window {
   display: none;
-  position: fixed;
+  position: relative;
   left: 50%;
   transform: translateX(-50%);
   z-index: 99999;
