--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -244,6 +244,7 @@
     width: 100%;
     border-radius: 20px;
     transition: transform 0.2s ease 0s;
+    cursor: pointer;
   }
 
   &__picture:hover {
